Nav for main page added

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body> <!-- A container -->
     <main> <!-- Container -->
         <header style="background-image: url('assets/images/heros.jpg');">
-            <div class="text">
-                <h1>I'm in My Best</h1>
-                <h4><i>Heyy Friend,
+            <div class="text ">
+                <h1 class="tracking-in-expand-fwd-top">I'm in My Best</h1>
+                <h4 class="tracking-in-expand-fwd-top"><i>Heyy Friend,
                     Thanks for checking up on me 
                     would you mind if i ride you to a journey exploring
                     your special friend (me).
                     Grab a bottle of pepsi and Happy Happy biscuit
                     as I share a lot about myself.
             </i></h4>
-               <a href="pages/best.html"> <button>Explore Me</button></a>
+               <a href="pages/best.html" class="tracking-in-expand-fwd-top"> <button>Explore Me</button></a>
             
             </div>
         </header>
@@ -27,3 +27,4 @@
     </main>
 </body>
 </html>
+
