So, we created a new page already and I bet it's beautifu

--- a/pages/best.html
+++ b/pages/best.html
@@ -22,8 +22,17 @@
         </nav>
         <div class="hero">
             <div class="text">
-                
+                <h3>Jovial, Kind and Born Hacker </h3>
+                <h1>Ajayi Raphael Temitope</h1>
+                <h4 class="second">I am Ajayi raphael, a.k.a Pyraph, I am a tech Educator and a Born
+                    leraner, I have strong believe in Psychology, Philosophy and Meta-Physics
+                    .</h4>
+                <button class="cta"><a href="#">Read More</a></button>
             </div>
+            <div class="images">
+                <img src="../assets/images/me1.jpg" alt="">
+            </div>
+        
         </div>
 
     </header>
